force-app/main/default/objects/Tracking__c/Tracking__c.object-meta.xml
<CustomObject>
    <label>Tracking</label>
    <pluralLabel>Tracking Records</pluralLabel>
    <nameField>
        <label>Tracking Number</label>
        <type>AutoNumber</type>
        <displayFormat>TRK-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>