force-app/main/default/objects/Tracking__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <type>Text</type>
    <length>255</length>

</CustomField>