force-app/main/default/objects/Tracking__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <type>Lookup</type>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipName>TrackingRecords</relationshipName>
    <relationshipLabel>Tracking Records</relationshipLabel>
</CustomField>