force-app/main/default/objects/Tracking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Booked</fullName><default>true</default></value>
            <value><fullName>In Transit</fullName><default>false</default></value>
            <value><fullName>Out for Delivery</fullName><default>false</default></value>
            <value><fullName>Delivered</fullName><default>false</default></value>
            <value><fullName>Exception</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>

</CustomField>